--- a/.gitignore
+++ b/.gitignore
@@ -73,8 +73,8 @@ crashlytics-build.properties
 .vsconfig
 .vscode
 .vscode/
-ProjectSettings/AutoStreamingSettings.asset
-ProjectSettings/SceneTemplateSettings.json
+# ProjectSettings/AutoStreamingSettings.asset
+# ProjectSettings/SceneTemplateSettings.json
 Packages/packages-lock.json
-ProjectSettings/PackageManagerSettings.asset
-ProjectSettings/ProjectVersion.txt
+# ProjectSettings/PackageManagerSettings.asset
+# ProjectSettings/ProjectVersion.txt
